--- a/个人系统1 - 进攻单腿摔法系统.md
+++ b/个人系统1 - 进攻单腿摔法系统.md
@@ -1,5 +1,5 @@
 ---
-title: 个人系统1 - 公平把摔法系统
+title: 个人系统1 - 进攻单腿摔法系统
 date: 2024-10-11 20:20:32
 tags:
   - 摔法	
@@ -23,6 +23,23 @@ categories:
 
 - A - 强力破势 Ankle Pick
 - B - 对手防御AP，转闪电侠抱腿
+
+
+
+## 思路
+
+1. 袖把+直门
+   1. 对手头抬高
+      1. Collar Drag slide in Single
+   2. 对手头埋低
+      1. Ankle pick 
+2. 公平把
+   1. 对手头抬高
+      1. HIZA GURUMA
+      2. De Ashi Harai
+   2. 对手头埋低
+      1. Fake Guard Pull Ankle Pick
+      2. Collar Tie Ankle Pick
 
 
 
