--- a/状态自检评估.md
+++ b/状态自检评估.md
@@ -47,10 +47,10 @@ sticky: 999
 
 
 
-| 睡觉 | 吃饭 | 自慰 | 腿部神经 | 总分 |
-| :--: | :--: | :--: | :------: | :--: |
-|  -6  |  -1  |  -6  |    -2    | -15  |
-|  2   |  1   |  0   |          |  3   |
-|      |      |      |          |      |
-|      |      |      |          |      |
+| 睡觉 | 吃饭 | 自慰 | 腿部神经 | 总分 | 状态 |
+| :--: | :--: | :--: | :------: | :--: | :--: |
+|  -6  |  -1  |  -6  |    -2    | -15  |  差  |
+|  2   |  1   |  0   |          |  3   |  中  |
+|  2   |  1   |  2   |    1     |  6   |  良  |
+|  4   |  3   |  6   |    3     |  16  |  好  |
 
